--- a/src/styles/template-parts-styles/need-help.scss
+++ b/src/styles/template-parts-styles/need-help.scss
@@ -1,78 +1,85 @@
 @import "../variables.scss";
 
 .need-help {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 32px;
-	margin-left: -16px;
-	margin-right: -16px;
-	margin-top: 65px;
-	padding: 192px 16px;
-	background-size: cover;
-	background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: -16px;
+  margin-right: -16px;
+  margin-top: 65px;
+  padding: 192px 16px;
+  background-size: cover;
+  background-position: center;
+  height: 500px;
 
-	@media screen and (min-width: $tablet) {
-		margin: 80px 0;
-		padding: 120px 16px;
-	}
+  @media screen and (min-width: $tablet) {
+    margin: 80px 0;
+    padding: 120px 16px;
+    height: 376px;
+  }
 
-	@media screen and (min-width: $desktop) {
-		margin-bottom: 130px;
-		margin-top: 132px;
-		padding: 262px 16px;
-	}
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 130px;
+    margin-top: 132px;
+    padding: 262px 16px;
+    height: 704px;
+  }
+  @media screen and (min-width: 1600px) {
+    height: 900px;
+  }
 }
 
 .need-help__title {
-	margin: 0;
-	color: $white;
-	font-size: 32px;
-	font-weight: 600;
-	line-height: 1;
-	text-align: center;
+  color: $white;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+  margin-bottom: 32px;
 
-	@media screen and (max-width: $mobile) {
-		font-size: 27px;
-	}
+  @media screen and (max-width: $mobile) {
+    font-size: 27px;
+  }
 
-	@media screen and (min-width: $tablet) {
-		font-size: 40px;
-		line-height: 1.4;
-	}
+  @media screen and (min-width: $tablet) {
+    font-size: 40px;
+    line-height: 1.4;
+  }
 
-	@media screen and (min-width: $desktop) {
-		font-size: 48px;
-	}
+  @media screen and (min-width: $desktop) {
+    font-size: 48px;
+    margin-bottom: 48px;
+  }
+  @media screen and (min-width: $full) {
+    font-size: 72px;
+  }
 }
 
 .need-help__button {
-	display: flex;
-	margin: 0 auto;
-	align-items: center;
-	justify-content: center;
-	padding-right: 20px;
-	padding-left: 20px;
-	text-align: center;
-	color: $main-blue;
-	background-color: $yellow;
+  margin: 0 auto;
+  padding: 26px 56px;
+  font-size: 24px;
+  min-width: 400px;
+  color: $main-blue;
+  background-color: $yellow;
+  @media screen and (max-width: $full) {
+    padding: 16px 32px;
+    min-width: 322px;
+  }
+  @media screen and (max-width: $full) {
+    font-size: 20px;
+  }
+  @media screen and (max-width: $tablet) {
+    min-width: 311px;
+  }
+  @media screen and (max-width: 370px) {
+    min-width: fit-content;
+  }
 
-	@media screen and (min-width: $mobile) {
-		min-width: 311px;
-	}
-
-	@media screen and (min-width: $tablet) {
-		min-width: 332px;
-	}
-
-	@media screen and (min-width: $desktop) {
-		min-width: 296px;
-	}
-
-	&:hover,
-	&:focus {
-		color: $yellow;
-		background-color: $main-blue;
-	}
+  &:hover,
+  &:focus {
+    color: $white;
+    background-color: $main-blue;
+  }
 }
