--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -1,94 +1,98 @@
 @import "../variables.scss";
 
 .help__animals {
-	position: relative;
-	margin-left: -16px;
-	margin-right: -16px;
-	margin-top: 64px;
-    height: 500px;
+  position: relative;
+  margin-left: -16px;
+  margin-right: -16px;
+  margin-top: 64px;
+  height: 500px;
 
-	@media screen and (min-width: $tablet) {
-		margin: 0;
-		margin-top: 80px;
-		height: auto;
-		margin-bottom: 80px;
-	}
+  @media screen and (min-width: $tablet) {
+    margin: 0;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    height: 376px;
+  }
 
-	@media screen and (min-width: $desktop) {
-        margin-top: 130px;
-		margin-bottom: 130px;
-	}
+  @media screen and (min-width: $desktop) {
+    margin-top: 130px;
+    margin-bottom: 130px;
+    height: 704px;
+  }
+  @media screen and (min-width: 1600px) {
+    height: 900px;
+  }
 }
 
-.help-animals__img{
-	width: 100%;
-	height: 100%;
-	object-fit: cover;	
+.help-animals__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.help__flex{
-	position: absolute;
-	width: 100%;
-	top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.help__flex {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .help-animals__title {
-	width: 100%;
-	color: $white;
-	font-size: 32px;
-	font-weight: 600;
-	line-height: 1;
-	text-align: center;
-	font-size: 27px;
-	margin-bottom: 32px;
+  width: 100%;
+  color: $white;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+  font-size: 27px;
+  margin-bottom: 32px;
 
-	@media screen and (min-width: $mobile) {
-		font-size: 32px;
-	}
+  @media screen and (min-width: $mobile) {
+    font-size: 32px;
+  }
 
-	@media screen and (min-width: $tablet) {
-		font-size: 40px;
-		line-height: 1.4;
-		font-weight: 600;
-	}
+  @media screen and (min-width: $tablet) {
+    font-size: 40px;
+    line-height: 1.4;
+    font-weight: 600;
+  }
 
-	@media screen and (min-width: $desktop) {
-		font-size: 48px;
-		margin-bottom: 48px;
-	}
+  @media screen and (min-width: $desktop) {
+    font-size: 48px;
+    margin-bottom: 48px;
+  }
+  @media screen and (min-width: $full) {
+    font-size: 72px;
+  }
 }
 
 .help-animals__button {
-	display: flex;
-    align-items: center;
-    justify-content: center;
-	margin: 0 auto;
-	color: $main-blue;
-	text-align: center;
-	background-color: $yellow;
-	font-size: 20px;
-	font-style: normal;
-	font-weight: 500;
-	min-width: 286px;
-	width: fit-content;
-	padding: 14px 32px;
-		
-	@media screen and (min-width: $tablet) {
-		min-width: 332px;
-	}
+  margin: 0 auto;
+  padding: 26px 56px;
+  font-size: 24px;
+  min-width: 400px;
+  color: $main-blue;
+  background-color: $yellow;
+  @media screen and (max-width: $full) {
+    padding: 16px 32px;
+    min-width: 322px;
+  }
+  @media screen and (max-width: $full) {
+    font-size: 20px;
+  }
+  @media screen and (max-width: $tablet) {
+    min-width: 311px;
+  }
+  @media screen and (max-width: 370px) {
+    min-width: fit-content;
+  }
 
-	@media screen and (min-width: $desktop) {
-		min-width: 296px;
-		font-size: 24px;
-	}
-
-	&:hover,
-	&:focus {
-		color: $yellow;
-		background-color: $main-blue;
-	}
+  &:hover,
+  &:focus {
+    color: $white;
+    background-color: $main-blue;
+  }
 }
