--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -1,258 +1,180 @@
 @import "../variables.scss";
 
+//hero section
 .house {
-  padding: 174px 16px;
-  margin-left: -16px;
-  margin-right: -16px;
-  margin-bottom: 64px;
-  text-align: center;
-  background-color: #c4c4c4;
-  background-size: cover;
-  background-position: center;
-
-  @media screen and (min-width: $tablet) {
-    padding: 125px 55px;
-    margin-left: 0;
-    margin-right: 0;
+  position: relative;
+  overflow: hidden;
+  height: 992px;
+  padding: 0 80px;
+  margin-bottom: 120px;
+  @media screen and (max-width: 1600px) {
+    height: 704px;
+  }
+  @media screen and (max-width: $full) {
+    padding: 0 75px;
+  }
+  @media screen and (max-width: $desktop) {
+    max-height: 509px;
+    padding: 0 40px;
     margin-bottom: 80px;
   }
-
-  @media screen and (min-width: $desktop) {
-    padding: 272px 240px;
-    margin-bottom: 117px;
+  @media screen and (max-width: 768px) {
+    max-height: 600px;
+    padding: 0;
+    margin-bottom: 64px;
   }
 }
 
+.img-hero {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .house__title-wraper {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1214px;
+  @media screen and (max-width: 1600px) {
+    width: 850px;
+  }
+  @media screen and (max-width: $desktop) {
+    width: 579px;
+  }
+
+  @media screen and (max-width: $tablet) {
+    max-width: 343px;
+    width: 100%;
+    padding: 0 16px;
   }
 }
 
 .house__title {
-  margin: 0;
-  margin-bottom: 32px;
+  margin-bottom: 40px;
   color: $white;
-  font-size: 32px;
+  font-size: 72px;
   font-weight: 600;
-  line-height: 1.3;
+  line-height: 1.4;
+  text-align: center;
 
-  @media screen and (min-width: $tablet) {
-    width: 580px;
-    margin-bottom: 48px;
-    font-size: 40px;
-    line-height: 1.4;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 810px;
+  @media screen and (max-width: 1600px) {
     font-size: 48px;
   }
-}
+  @media screen and (max-width: $desktop) {
+    margin-bottom: 48px;
+    font-size: 40px;
+  }
 
-.house__link {
-  @media screen and (min-width: $tablet) {
-    display: inline-block;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 32px;
+    font-size: 32px;
+  }
+  @media screen and (max-width: 370px) {
+    margin-bottom: 26px;
+    font-size: 26px;
   }
 }
 
 .house__button {
-  display: block;
-  margin: 0 auto;
-  padding: 14px 20px;
-  text-align: center;
-
-  @media screen and (min-width: $tablet) {
-    min-width: 332px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-  }
-
-  @media screen and (min-width: $desktop) {
+  padding: 26px 56px;
+  font-size: 24px;
+  min-width: 400px;
+  @media screen and (max-width: $full) {
+    padding: 16px 32px;
     min-width: 322px;
-    font-size: 24px;
-    line-height: auto;
+    font-size: 20px;
   }
-}
-@import "../variables.scss";
-
-.house {
-  padding: 174px 16px;
-  margin-left: -16px;
-  margin-right: -16px;
-  margin-bottom: 64px;
-  text-align: center;
-  background-color: #c4c4c4;
-  background-size: cover;
-  background-position: center;
-
-  @media screen and (min-width: $tablet) {
-    padding: 125px 55px;
-    margin-left: 0;
-    margin-right: 0;
-    margin-bottom: 80px;
+  @media screen and (max-width: $tablet) {
+    min-width: 311px;
   }
-
-  @media screen and (min-width: $desktop) {
-    padding: 272px 240px;
-    margin-bottom: 117px;
+  @media screen and (max-width: 370px) {
+    min-width: fit-content;
   }
 }
 
-.house__title-wraper {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    justify-content: center;
-  }
-}
-
-.house__title {
-  margin: 0;
-  margin-bottom: 32px;
-  color: $white;
-  font-size: 32px;
-  font-weight: 600;
-  line-height: 1.3;
-
-  @media screen and (min-width: $tablet) {
-    width: 580px;
-    margin-bottom: 48px;
-    font-size: 40px;
-    line-height: 1.4;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 810px;
-    font-size: 48px;
-  }
-}
-
-.house__link {
-  @media screen and (min-width: $tablet) {
-    display: inline-block;
-  }
-}
-
-.house__button {
-  display: block;
-  margin: 0 auto;
-  padding: 14px 20px;
-  text-align: center;
-
-  @media screen and (min-width: $tablet) {
-    min-width: 332px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-  }
-
-  @media screen and (min-width: $desktop) {
-    min-width: 322px;
-    font-size: 24px;
-    line-height: auto;
-  }
-}
-
+//support section
 .support {
-  margin-bottom: 64px;
-
-  @media screen and (min-width: $tablet) {
+  margin-bottom: 117px;
+  @media screen and (max-width: $desktop) {
     margin-bottom: 80px;
   }
-
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 117px;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 64px;
   }
 }
 
 .support__title {
-  margin-bottom: 32px;
+  margin: 0;
   color: $black;
-  font-size: 28px;
   font-weight: 500;
-  line-height: 1.3;
-
-  @media screen and (min-width: $tablet) {
+  line-height: auto;
+  margin-bottom: 88px;
+  font-size: 56px;
+  @media screen and (max-width: $full) {
+    margin-bottom: 56px;
+    font-size: 40px;
+  }
+  @media screen and (max-width: $desktop) {
     margin-bottom: 40px;
     font-size: 32px;
     line-height: 1;
   }
-
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 56px;
-    font-size: 40px;
-    line-height: auto;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 32px;
+    font-size: 28px;
   }
 }
 
 .support__list {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-
-  @media screen and (min-width: $tablet) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-basis: 200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 56px;
+  @media screen and (max-width: 1600px) {
     gap: 24px;
-    justify-content: space-evenly;
   }
-
-  @media screen and (min-width: 1280px) {
-    flex-basis: 350px;
-    gap: 56px;
-    justify-content: space-between;
-    padding-right: 64px;
-    padding-left: 64px;
+  @media screen and (max-width: 768px) {
+    display: block;
   }
 }
 
-.support__item {
-  @media screen and (min-width: $tablet) {
-    width: 200px;
-  }
-
-  @media screen and (min-width: 900px) {
-    width: 255px;
-  }
-
-  @media screen and (min-width: 1120px) {
-    width: 300px;
+.support__item:not(:last-child) {
+  padding: 0 16px;
+  @media screen and (max-width: 768px) {
+    padding: 0;
+    margin-bottom: 40px;
   }
 }
 
 .support__count {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   margin-bottom: 24px;
-  padding-top: 45px;
-  width: 140px;
-  height: 140px;
   color: $black;
-  font-size: 42px;
   font-weight: 500;
   line-height: 1;
-  text-align: center;
   border: 2px solid $yellow;
   border-radius: 100%;
+  width: 200px;
+  height: 200px;
+  font-size: 64px;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: 1600px) {
+    width: 140px;
+    height: 140px;
+    font-size: 42px;
+  }
+  @media screen and (max-width: $desktop) {
     font-size: 36px;
     font-weight: 600;
   }
-
-  @media screen and (min-width: $desktop) {
+  @media screen and (max-width: 768px) {
     font-size: 42px;
   }
 }
@@ -260,34 +182,31 @@
 .support__text {
   margin: 0 auto;
   color: $black;
-  font-size: 18px;
+  font-size: 26px;
   font-weight: 400;
   line-height: 1.4;
   text-align: center;
-
-  @media screen and (min-width: $mobile) and (max-width: 767.9px) {
-    width: 340px;
+  @media screen and (max-width: 1600px) {
+    font-size: 18px;
   }
-
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: 1200px) {
     font-size: 16px;
     line-height: 1.3;
   }
-
-  @media screen and (min-width: 1280px) {
+  @media screen and (max-width: 768px) {
     font-size: 18px;
+    max-width: 340px;
   }
 }
 
+// about section
 .about {
-  margin-bottom: 64px;
-
-  @media screen and (min-width: $tablet) {
+  margin-bottom: 117px;
+  @media screen and (max-width: $desktop) {
     margin-bottom: 80px;
   }
-
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 117px;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 64px;
   }
 }
 
@@ -324,7 +243,7 @@
     line-height: auto;
     padding-right: 75px;
   }
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $full) {
     padding: 0 80px;
     font-size: 56px;
   }
@@ -382,7 +301,7 @@
   @media screen and (min-width: 1600px) {
     font-size: 22px;
   }
-  @media screen and (min-width: 1880px) {
+  @media screen and (min-width: 1800px) {
     font-size: 26px;
   }
 }
@@ -517,49 +436,48 @@
 }
 
 .news {
-  margin-top: 64px;
-  margin-bottom: 64px;
-
-  @media screen and (min-width: $tablet) {
+  margin-top: 117px;
+  margin-bottom: 117px;
+  @media screen and (max-width: $desktop) {
     margin-top: 80px;
     margin-bottom: 56px;
   }
-
-  @media screen and (min-width: $desktop) {
-    margin-top: 117px;
-    margin-bottom: 117px;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 64px;
+    margin-top: 64px;
   }
 }
 
 .news__hide {
-  @media screen and (min-width: 600px) {
-    display: none;
+  display: none;
+  @media screen and (max-width: $tablet) {
+    display: block;
   }
 }
 
 .news__title {
   margin: 0;
-  margin-bottom: 32px;
   color: $black;
-  font-size: 28px;
   font-weight: 500;
   line-height: auto;
-
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 24px;
+  margin-bottom: 56px;
+  font-size: 56px;
+  @media screen and (max-width: $full) {
+    font-size: 40px;
+  }
+  @media screen and (max-width: $desktop) {
+    margin-bottom: 40px;
     font-size: 32px;
     line-height: 1;
   }
-
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 56px;
-    font-size: 40px;
-    line-height: auto;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 32px;
+    font-size: 28px;
   }
 }
 
 .news__wraper {
-  @media screen and (max-width: 599.98px) {
+  @media screen and (max-width: $tablet) {
     display: flex;
     justify-content: space-between;
   }
@@ -568,16 +486,17 @@
 .news__wraper-img {
   position: relative;
   overflow: hidden;
-  margin-bottom: 24px;
   padding-bottom: 133%;
-  @media screen and (max-width: 599.98px) {
-    height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0;
+  @media screen and (max-width: $desktop) {
+    margin-bottom: 16px;
   }
-  @media screen and (min-width: 600px) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0;
+  @media screen and (max-width: $tablet) {
+    height: 0;
+    display: block;
   }
 }
 
@@ -602,16 +521,18 @@
 }
 
 .news__flexWraper {
-  display: none;
-  @media screen and (min-width: 600px) {
-    display: grid;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 20px;
+  @media screen and (max-width: $desktop) {
+    column-gap: 30px;
+  }
+  @media screen and (max-width: $desktop) {
     grid-template-columns: 1fr 1fr;
     column-gap: 24px;
   }
-
-  @media screen and (min-width: 1200px) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 30px;
+  @media screen and (max-width: $tablet) {
+    display: none;
   }
 }
 
@@ -621,48 +542,52 @@
   margin-top: 18px;
   margin-bottom: 12px;
   color: $grey;
-  font-size: 14px;
   font-weight: 400;
   line-height: 1.35;
+  font-size: 20px;
+  @media screen and (max-width: $full) {
+    font-size: 14px;
+  }
 }
 
 .news__subTitle {
-  margin: 0;
-  margin-bottom: 32px;
   color: $black;
-  font-size: 18px;
   font-weight: 500;
   line-height: 1.4;
-
-  @media screen and (min-width: 600px) {
-    margin-bottom: 24px;
+  font-size: 26px;
+  @media screen and (max-width: $full) {
     font-size: 16px;
+    margin-bottom: 0;
+  }
+  @media screen and (max-width: $desktop) {
+    margin-bottom: 24px;
     line-height: 1.35;
   }
 
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 0;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 32px;
+    font-size: 18px;
   }
 }
 
 .bank-details__title {
   margin: 0;
-  margin-bottom: 32px;
   color: $black;
-  font-size: 28px;
   font-weight: 500;
   line-height: auto;
-
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 24px;
+  margin-bottom: 56px;
+  font-size: 56px;
+  @media screen and (max-width: $full) {
+    font-size: 40px;
+  }
+  @media screen and (max-width: $desktop) {
+    margin-bottom: 40px;
     font-size: 32px;
     line-height: 1;
   }
-
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 56px;
-    font-size: 40px;
-    line-height: auto;
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 32px;
+    font-size: 28px;
   }
 }
 
@@ -710,13 +635,13 @@
 .tabs-span1 {
   display: none;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     display: block;
   }
 }
 
 .tabs-span2 {
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     display: none;
   }
 }
@@ -753,17 +678,16 @@
 .tabs__flexWraper {
   margin-top: -51px;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 720px) {
     display: flex;
     justify-content: space-between;
-    gap: 128px;
   }
   @media screen and (min-width: $desktop) {
     margin-right: 35px;
   }
 }
 .tabs__textWraper {
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 720px) {
     display: flex;
     gap: 8px;
   }
@@ -787,7 +711,7 @@
     margin-top: -8px;
   }
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 720px) {
     width: 130px;
     height: 140px;
     margin-top: 0;
@@ -804,22 +728,28 @@
 }
 
 .tabs-button {
-  display: flex;
   margin: 0 auto;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding-right: 10px;
-  padding-left: 10px;
-
-  @media screen and (min-width: $tablet) {
-    min-width: 332px;
+  padding: 26px 56px;
+  font-size: 24px;
+  min-width: 400px;
+  margin-top: -25px;
+  color: $main-blue;
+  background-color: $yellow;
+  @media screen and (max-width: $full) {
+    padding: 16px 32px;
+    min-width: 322px;
+    margin-top: 0;
+    color: $white;
+    background-color: $main-blue;
   }
-
-  @media screen and (min-width: $desktop) {
-    min-width: 297px;
-    margin-top: -25px;
-    font-size: 24px;
+  @media screen and (max-width: $full) {
+    font-size: 20px;
+  }
+  @media screen and (max-width: $tablet) {
+    min-width: 311px;
+  }
+  @media screen and (max-width: 370px) {
+    min-width: fit-content;
   }
 }
 
@@ -842,6 +772,9 @@
     font-size: 18px;
     line-height: auto;
   }
+  @media screen and (min-width: $full) {
+    font-size: 26px;
+  }
 }
 
 .bank-details__text-second {
@@ -863,5 +796,9 @@
   @media screen and (min-width: $desktop) {
     font-size: 18px;
     line-height: auto;
+  }
+  @media screen and (min-width: $full) {
+    margin-bottom: 14px;
+    font-size: 26px;
   }
 }
