--- a/src/styles/template-parts-styles/founding-documents.scss
+++ b/src/styles/template-parts-styles/founding-documents.scss
@@ -13,7 +13,7 @@
   }
 
   @media screen and (min-width: 1600px) {
-    padding: 100px 80px;
+    padding: 100px 0;
   }
 }
 
@@ -36,7 +36,7 @@
     font-size: 40px;
   }
 
-  @media screen and (min-width: $full) {
+  @media screen and (min-width: 1441px) {
     font-size: 56px;
     margin-bottom: 80px;
   }
