--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -77,7 +77,7 @@
   color: $main-blue;
   background-color: $yellow;
   @media screen and (max-width: $full) {
-    padding: 16px 32px;
+    padding: 14px 32px;
     min-width: 322px;
   }
   @media screen and (max-width: $full) {
@@ -86,7 +86,7 @@
   @media screen and (max-width: $tablet) {
     min-width: 311px;
   }
-  @media screen and (max-width: 370px) {
+  @media screen and (max-width: $mobile) {
     min-width: fit-content;
   }
 
