fixed buttons, block width on home page

--- a/src/styles/template-parts-styles/need-help.scss
+++ b/src/styles/template-parts-styles/need-help.scss
@@ -74,7 +74,7 @@
     min-width: 311px;
   }
   @media screen and (max-width: $mobile) {
-    min-width: fit-content;
+    min-width: 286px;
   }
 
   &:hover,
