--- a/src/styles/template-parts-styles/founding-documents.scss
+++ b/src/styles/template-parts-styles/founding-documents.scss
@@ -1,19 +1,16 @@
 @import "../variables.scss";
 
 .documents {
-  padding: 32px 0 40px 0;
+  padding: 100px 0;
   background: $main-blue;
-
-  @media screen and (min-width: $tablet) {
-    padding: 40px 0 60px 0;
-  }
-
-  @media screen and (min-width: $desktop) {
+  @media screen and (max-width: 1600px) {
     padding: 48px 0 64px 0;
   }
-
-  @media screen and (min-width: 1600px) {
-    padding: 100px 0;
+  @media screen and (max-width: $desktop) {
+    padding: 40px 0 60px 0;
+  }
+  @media screen and (max-width: $tablet) {
+    padding: 32px 0 40px 0;
   }
 }
 
@@ -31,7 +28,7 @@
     line-height: 1;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 993px) {
     margin-bottom: 56px;
     font-size: 40px;
   }
@@ -122,7 +119,7 @@
   font-weight: 500;
   line-height: 1.4;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 577px) {
     position: absolute;
     width: 130px;
     left: 42px;
