--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -4,7 +4,6 @@
   height: 568px;
   display: flex;
   max-width: fit-content;
-  padding: 0;
   box-shadow: 0px 4px 11px 0px rgba(137, 137, 137, 0.25);
   @media screen and (max-width: $full) {
     height: 343px;
@@ -13,6 +12,7 @@
     height: auto;
     display: block;
     max-width: $tablet;
+    width: 100%;
     padding: 24px 16px;
     margin: 0 auto;
   }
