--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -222,11 +222,7 @@
   @media screen and (min-width: $tablet) {
     padding-right: 0;
   }
-
-  @media screen and (min-width: 1440px) {
-    padding: 0;
-  }
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: $full) {
     padding-right: 80px;
   }
 }
@@ -245,14 +241,14 @@
     line-height: 1;
     padding-right: 40px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 993px) {
     margin-bottom: 56px;
     font-size: 40px;
     line-height: auto;
     padding-right: 75px;
   }
   @media screen and (min-width: $full) {
-    padding: 0 80px;
+    padding-right: 80px;
   }
   @media screen and (min-width: 1441px) {
     font-size: 56px;
@@ -263,9 +259,12 @@
   @media screen and (min-width: $tablet) {
     position: relative;
   }
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1300px) {
     display: grid;
     grid-template-columns: 1fr 1.2fr;
+    column-gap: 100px;
+  }
+  @media screen and (min-width: $full) {
     column-gap: 140px;
   }
   @media screen and (min-width: 1600px) {
@@ -303,9 +302,10 @@
     font-size: 18px;
     padding-right: 75px;
   }
+  @media screen and (min-width: 1300px) {
+    padding: 0;
+  }
   @media screen and (min-width: $full) {
-    padding-right: 0;
-    padding-left: 80px;
     margin-bottom: 0;
   }
   @media screen and (min-width: 1600px) {
@@ -336,7 +336,7 @@
     max-height: 466px;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1300px) {
     padding-bottom: 70%;
     max-height: 490px;
   }
@@ -369,10 +369,10 @@
     gap: 62px;
     margin-top: 24px;
   }
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1300px) {
     position: absolute;
     bottom: 0;
-    left: 75px;
+    left: 0;
     margin-top: 0;
   }
   @media screen and (min-width: 1600px) {
@@ -388,14 +388,13 @@
     font-weight: 500;
     line-height: 1.3;
   }
-  @media screen and (min-width: 1440px) {
-    bottom: 18px;
-    left: 145px;
+  @media screen and (min-width: 1300px) {
+    bottom: 16px;
+    left: 72px;
   }
   @media screen and (min-width: 1600px) {
     font-size: 32px;
-    bottom: 16px;
-    left: 168px;
+    left: 94px;
   }
 }
 .custom-next-icon,
@@ -416,7 +415,7 @@
       transform: scale(1.1);
     }
   }
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1300px) {
     width: 56px;
     height: 56px;
   }
@@ -437,10 +436,10 @@
   @media screen and (min-width: $tablet) {
     width: 82.5%;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1300px) {
     width: 90%;
   }
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: 1441px) {
     width: 100%;
   }
 }
