--- a/src/styles/template-parts-styles/founding-documents.scss
+++ b/src/styles/template-parts-styles/founding-documents.scss
@@ -1,16 +1,19 @@
 @import "../variables.scss";
 
 .documents {
-  padding: 100px 0;
+  padding: 32px 0 40px 0;
   background: $main-blue;
-  @media screen and (max-width: 1600px) {
-    padding: 48px 0 64px 0;
-  }
-  @media screen and (max-width: $desktop) {
+
+  @media screen and (min-width: $tablet) {
     padding: 40px 0 60px 0;
   }
-  @media screen and (max-width: $tablet) {
-    padding: 32px 0 40px 0;
+
+  @media screen and (min-width: $desktop) {
+    padding: 48px 0 64px 0;
+  }
+
+  @media screen and (min-width: 1600px) {
+    padding: 100px 0;
   }
 }
 
@@ -119,7 +122,7 @@
   font-weight: 500;
   line-height: 1.4;
 
-  @media screen and (min-width: 577px) {
+  @media screen and (min-width: $tablet) {
     position: absolute;
     width: 130px;
     left: 42px;
